--- a/.github/workflows/shell-app-android.yml
+++ b/.github/workflows/shell-app-android.yml
@@ -29,6 +29,16 @@ jobs:
         run: |
           echo "::add-path::$(pwd)/bin"
           echo "::set-env name=EXPO_ROOT_DIR::$(pwd)"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - run: yarn install --frozen-lockfile
       - run: sudo apt-get install awscli
       - name: Build Android packages
         run: expotools android-build-packages --packages all
